# liblistserv

./: .gitignore  AUTHORS  CHANGES  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  liblistserv.pc.in  sieve.mailtpl
doc/: liblistserv.texi  liblistserv.texinfo
lib/: .gitignore
m4/: gnulib-cache.m4
src/: content_filter.l  demo.c  lcmdx.c  liblistserv.c  liblistserv.h  list_header.l  sieve_scripts.c  stringlist.c  stringlist.h  util.c  util.h
